--- a/WebScrapingTutorial/BeautifulSoup_Tutorial.ipynb
+++ b/WebScrapingTutorial/BeautifulSoup_Tutorial.ipynb
@@ -113,7 +113,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Declare the website as a string. For this example, I've decided to grab the data from rottentomatoes website, parse\n",
