Updated with latest Selenium Tutorial changes

--- a/WebScrapingTutorial/Selenium Tutorial.ipynb
+++ b/WebScrapingTutorial/Selenium Tutorial.ipynb
@@ -15,11 +15,7 @@
     "> 2.b <a href='##find_elements'>Find elements using the Selenium Library</a> <br>\n",
     "> 2.c <a href='##click_scroll'>Clicking, scrolling, going back</a> <br>\n",
     "3. <a href='##scrolling_example'>Selenium scrolling example</a> <br>\n",
-    "4. <a href='##links'>Iterating through all movie links</a> <br>\n",
-    "> 3.a <a href='##bs4_html'>Creating the right HTML objects to parse</a> <br>\n",
-    "> 3.b <a href='##bs4_find_html'>Creating nested HTML objects using **find( ) and **find_all( ) methodology</a> <br>\n",
-    "> 3.c <a href='##pulling_tags'>Parsing the individual movies and pulling the data</a> <br>\n",
-    "> 3.d <a href='##storing_data'>Storing the data and exporting to CSV</a> <br>"
+    "4. <a href='##links'>Iterating through all movie links</a> <br>"
    ]
   },
   {
@@ -804,62 +800,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each of the \"View All\" objects have different **id** tag names. However if we look at the **div class** parent node, we see that all the **class names are \"clickMore\"**. So what we'll do is create a list of all the **\"clickMore\"** objects, and then select the first child node. "
+    "Each of the **\"View All\"** objects have different **id** tag names (1). However if we look at the **div class** parent node (2), we see that all the **class names are \"clickMore\"**. So what we'll do is create a list of all the **\"clickMore\"** objects, and then select the first child node.\n",
+    "\n",
+    "![title](ViewAll.png)\n",
+    "\n",
+    "* Once we've selected the correct child nodes, we'll extract the **href** tag, which we can follow to parse the relevant links for our data analysis.\n",
+    "\n",
+    "* Using a **try-except** statement, we'll search for the the **\"clickMore\"** objects which our scraper can parse, and then export that data to CSV files with the page name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.rottentomatoes.com/about\n",
-      "pass\n",
-      "https://editorial.rottentomatoes.com/total-recall/\n",
-      "pass\n",
-      "https://editorial.rottentomatoes.com/rt-hubs/\n",
-      "pass\n",
-      "https://editorial.rottentomatoes.com/news/\n",
-      "pass\n",
-      "https://www.rottentomatoes.com/browse/opening/\n",
-      "OPENING THIS WEEK\n",
-      "https://www.rottentomatoes.com/browse/in-theaters/\n",
-      "TOP BOX OFFICE\n",
-      "WEEKEND BOX OFFICE EARNINGS\n",
-      "https://www.rottentomatoes.com/browse/upcoming/\n",
-      "COMING SOON\n",
-      "https://www.rottentomatoes.com/browse/tv-list-1\n",
-      "CERTIFIED FRESH TV\n",
-      "pass\n",
-      "https://www.rottentomatoes.com/browse/tv-list-2\n",
-      "MOST POPULAR TV ON RT\n",
-      "pass\n",
-      "https://www.rottentomatoes.com/browse/top-dvd-streaming/\n",
-      "TOP DVD & STREAMING\n",
-      "https://www.rottentomatoes.com/browse/cf-in-theaters/\n",
-      "CERTIFIED FRESH MOVIES\n",
-      "WEEKEND BOX OFFICE EARNINGS\n",
-      "https://editorial.rottentomatoes.com/video-interviews/\n",
-      "pass\n",
-      "https://editorial.rottentomatoes.com/news/\n",
-      "pass\n",
-      "https://editorial.rottentomatoes.com/publications/\n",
-      "pass\n"
+     "ename": "NameError",
+     "evalue": "name 'buttons' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f9490097b3e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#![title](ViewAll.png)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mbutton\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbuttons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;31m#Extract the \"href\" element\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mwebsite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbutton\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//*\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_attribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"href\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwebsite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'buttons' is not defined"
      ]
     }
    ],
    "source": [
+    "#![title](ViewAll.png)\n",
     "for button in buttons:\n",
+    "    #Extract the \"href\" element\n",
     "    website = button.find_element_by_xpath(\".//*\").get_attribute(\"href\")\n",
     "    print(website)\n",
     "    driver = webdriver.Firefox()\n",
     "    driver.get(website)\n",
     "    time.sleep(5)\n",
+    "    #If the \"clickMore\" object has a 'main-column-item', parse the page\n",
     "    try:\n",
     "        print(driver.find_element_by_class_name('main-column-item').text)\n",
     "        time.sleep(5)\n",
@@ -874,12 +852,39 @@
     "                scores.append(movie.find_element_by_class_name('tMeterScore').text)\n",
     "            except:\n",
     "                scores.append(None)\n",
+    "        #The 'main-column-item' element is saved as the CSV file name so that we know what data we're looking at\n",
     "        pd.DataFrame({'Title':titles, 'Dates': dates, 'Score': scores}).to_csv(driver.find_element_by_class_name('main-column-item').text + '.csv')\n",
+    "    #If the \"clickMore\" object does not have a 'main-column-item', pass\n",
     "    except:\n",
     "        print(\"pass\")\n",
     "    driver.quit()\n",
     "    time.sleep(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Congratulations! \n",
+    "\n",
+    "You've covered some important concepts for webscraping with **Selenium**, including:\n",
+    "\n",
+    "* How to install/run headless browsers to automate point-click tasks\n",
+    "* Extracting web elements using Selenium\n",
+    "* Scrolling and clicking through a webpage\n",
+    "* Handling non-trivial websites and scrolling\n",
+    "\n",
+    "All of these concepts will be very useful. Our next lecture will tie these web-scraping building blocks together with a **faster, cleaner framework (Scrapy)** to run these processes in **parallel**, and provide us the autonomy to run scrapers using all of these tools (plus many more) at **break-neck speed**!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
