--- a/WebScrapingTutorial/Selenium Tutorial.ipynb
+++ b/WebScrapingTutorial/Selenium Tutorial.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -157,8 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"d32bf704-b97b-4640-bf7c-5eba2b2d01c6\", element=\"bdfe4b88-0259-1848-8b08-c62173612d0d\")>\n",
-      "<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"d32bf704-b97b-4640-bf7c-5eba2b2d01c6\", element=\"bdfe4b88-0259-1848-8b08-c62173612d0d\")>\n"
+      "<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"55488594-2c67-d24e-9284-f1cad8ccf2e3\", element=\"06ed2768-2f7e-1b42-bcb2-914b60118174\")>\n",
+      "<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"55488594-2c67-d24e-9284-f1cad8ccf2e3\", element=\"06ed2768-2f7e-1b42-bcb2-914b60118174\")>\n"
      ]
     }
    ],
@@ -239,7 +239,110 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Predator\n",
+      "In Theaters Sep 14\n",
+      "34%\n",
+      "The Nun\n",
+      "In Theaters Sep 7\n",
+      "28%\n",
+      "A Simple Favor\n",
+      "In Theaters Sep 14\n",
+      "84%\n",
+      "White Boy Rick\n",
+      "In Theaters Sep 14\n",
+      "59%\n",
+      "Crazy Rich Asians\n",
+      "In Theaters Aug 15\n",
+      "93%\n",
+      "Peppermint\n",
+      "In Theaters Sep 7\n",
+      "11%\n",
+      "The Meg\n",
+      "In Theaters Aug 10\n",
+      "46%\n",
+      "Searching\n",
+      "In Theaters Aug 31\n",
+      "92%\n",
+      "Mission: Impossible - Fallout\n",
+      "In Theaters Jul 27\n",
+      "97%\n",
+      "Christopher Robin\n",
+      "In Theaters Aug 3\n",
+      "70%\n",
+      "Unbroken: Path To Redemption\n",
+      "In Theaters Sep 14\n",
+      "26%\n",
+      "BlacKkKlansman\n",
+      "In Theaters Aug 10\n",
+      "95%\n",
+      "Operation Finale\n",
+      "In Theaters Aug 29\n",
+      "58%\n",
+      "The Wife\n",
+      "In Theaters Aug 17\n",
+      "85%\n",
+      "Alpha\n",
+      "In Theaters Aug 17\n",
+      "82%\n",
+      "Hotel Transylvania 3: Summer Vacation\n",
+      "In Theaters Jul 13\n",
+      "59%\n",
+      "Incredibles 2\n",
+      "In Theaters Jun 15\n",
+      "94%\n",
+      "God Bless The Broken Road\n",
+      "In Theaters Sep 7\n",
+      "11%\n",
+      "Ant-Man And The Wasp\n",
+      "In Theaters Jul 6\n",
+      "88%\n",
+      "Mamma Mia! Here We Go Again\n",
+      "In Theaters Jul 20\n",
+      "80%\n",
+      "Slender Man\n",
+      "In Theaters Aug 10\n",
+      "7%\n",
+      "Husband Material (Manmarziyaan)\n",
+      "In Theaters\n",
+      "67%\n",
+      "Jurassic World: Fallen Kingdom\n",
+      "In Theaters Jun 22\n",
+      "49%\n",
+      "Juliet, Naked\n",
+      "In Theaters Aug 17\n",
+      "81%\n",
+      "Ya Veremos\n",
+      "In Theaters Aug 31\n",
+      "0%\n",
+      "Mile 22\n",
+      "In Theaters Aug 17\n",
+      "23%\n",
+      "Equalizer 2\n",
+      "In Theaters Jul 20\n",
+      "51%\n",
+      "The Bookshop\n",
+      "In Theaters Aug 24\n",
+      "55%\n",
+      "Teen Titans Go! To The Movies\n",
+      "In Theaters Jul 27\n",
+      "90%\n",
+      "The Happytime Murders\n",
+      "In Theaters Aug 24\n",
+      "22%\n",
+      "Three Identical Strangers\n",
+      "In Theaters Jun 29\n",
+      "97%\n",
+      "Pick Of The Litter\n",
+      "In Theaters Aug 31\n",
+      "100%\n"
+     ]
+    }
+   ],
    "source": [
     "titles = []\n",
     "dates = []\n",
